unpackaged/objects/Disbursement_Target_Table__c.object
<CustomObject>
    <fields>
        <fullName>Average_CTC_In_Lakhs__c</fullName>
        <formula>(CTC_Range_Min_In_Lakhs__c + CTC_Range_Max_In_Lakhs__c )/2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average CTC (In Lakhs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTC_Range_Max_In_Lakhs__c</fullName>
        <label>CTC Range Max (In Lakhs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTC_Range_Min_In_Lakhs__c</fullName>
        <label>CTC Range Min (In Lakhs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Target_In_Cr__c</fullName>
        <formula>CASE(TEXT(Product__c), &apos;Secured&apos;, Product_Multiplier_Secured__c, 
					&apos;Unsecured&apos;, Product_Multiplier_Unsecured__c,
					&apos;UCV&apos;, Product_Multiplier_UCV__c,
					0) * Average_CTC_In_Lakhs__c * 0.01</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Target (In Cr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Multiplier_Secured__c</fullName>
        <label>Product Multiplier - Secured</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Multiplier_UCV__c</fullName>
        <label>Product Multiplier - UCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Multiplier_Unsecured__c</fullName>
        <label>Product Multiplier - Unsecured</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secured</fullName>
                </value>
                <value>
                    <fullName>Unsecured</fullName>
                </value>
                <value>
                    <fullName>UCV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Disbursement Target Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DIS-{00000}</displayFormat>
        <label>Disbursement Target Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursement Target Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>